fix: since we want to hide user's from another as much as possible, I shouldn't have been leaking the user IDs that created companies to other users, since we have an admin only query that shows that data in details that is going to be the default from now on
